# Hackathon

./: AGENTS.md  README.md
pragati_ros2/src/common_utils/: CMakeLists.txt  package.xml
pragati_ros2/src/common_utils/cmake/: PragatiDefaults.cmake  PragatiLintSkips.cmake  PragatiRPiDetect.cmake
pragati_ros2/src/common_utils/common_utils/: __init__.py  consecutive_failure_tracker.py  json_logging.py
pragati_ros2/src/common_utils/docs/: JSON_LOG_CONVENTIONS.md
pragati_ros2/src/common_utils/src/: signal_handler.cpp
pragati_ros2/src/common_utils/test/: test_cmake_no_inline_boilerplate.py  test_consecutive_failure_tracker.cpp  test_signal_handler.cpp  test_signal_handler_consolidation.py
pragati_ros2/src/cotton_detection_msgs/: CMakeLists.txt  package.xml
pragati_ros2/src/cotton_detection_msgs/msg/: CottonPosition.msg  DetectionResult.msg  PerformanceMetrics.msg
pragati_ros2/src/cotton_detection_msgs/srv/: CottonDetection.srv
pragati_ros2/src/cotton_detection_msgs/test/: test_cotton_detection_msgs_extraction.py
pragati_ros2/src/cotton_detection_ros2/: CMakeLists.txt  OFFLINE_TESTING.md  README.md  REFACTORING_NOTES.md  package.xml
pragati_ros2/src/cotton_detection_ros2/config/: production.yaml  simulation_test.yaml
pragati_ros2/src/cotton_detection_ros2/launch/: cotton_detection_cpp.launch.py
pragati_ros2/src/cotton_detection_ros2/src/: async_image_saver.cpp  async_json_logger.cpp  camera_manager.cpp  cotton_detection_node.cpp  cotton_detection_node_init.cpp  cotton_detection_node_main.cpp  cotton_detection_node_parameters.cpp  depthai_manager.cpp  detection_engine.cpp  device_connection.cpp  diagnostics_collector.cpp  performance_monitor.cpp  pipeline_builder.cpp  service_handler.cpp  thermal_guard.cpp
pragati_ros2/src/cotton_detection_ros2/test/: test_async_json_logger.cpp  test_blocking_sleep_audit.cpp  test_camera_manager.cpp  test_detection_engine.cpp  test_device_connection.cpp  test_diagnostics_collector.cpp  test_executor_safety.cpp  test_pipeline_builder.cpp  test_simulation_mode.cpp  test_stereo_param_configurability.cpp  test_thermal_guard.cpp  test_thermal_logging.cpp  test_zero_spatial_diagnostics.cpp
pragati_ros2/src/motor_control_msgs/: CMakeLists.txt  README.md  package.xml
pragati_ros2/src/motor_control_msgs/action/: JointHoming.action  JointPositionCommand.action  StepResponseTest.action
pragati_ros2/src/motor_control_msgs/srv/: ClearMotorErrors.srv  DriveStop.srv  EmergencyStop.srv  JointHoming.srv  JointPositionCommand.srv  JointStatus.srv  MotorCommand.srv  MotorLifecycle.srv  ReadEncoder.srv  ReadMotorAngles.srv  ReadMotorLimits.srv  ReadMotorState.srv  ReadPID.srv  SetAxisState.srv  WriteEncoderZero.srv  WriteMotorLimits.srv  WritePID.srv  WritePIDToROM.srv
pragati_ros2/src/motor_control_ros2/: CMakeLists.txt  NODES_DIAGRAM.md  QUICK_REFERENCE.md  README.md  README_NODES.md  RENAME_SUMMARY.md  package.xml
pragati_ros2/src/motor_control_ros2/archive/: README.md
pragati_ros2/src/motor_control_ros2/config/: hardware_interface.yaml  mg6010_test.yaml  production.yaml  vehicle_motors.yaml
pragati_ros2/src/motor_control_ros2/docs/: ROS2_CONTROL_STATUS.md
pragati_ros2/src/motor_control_ros2/launch/: hardware_interface.launch.py  mg6010_controller.launch.py  mg6010_test.launch.py  vehicle_motors.launch.py
pragati_ros2/src/motor_control_ros2/scripts/: joint_cycle_test.py
pragati_ros2/src/motor_control_ros2/src/: action_server_manager.cpp  control_loop_manager.cpp  generic_hw_interface.cpp  generic_motor_controller.cpp  gpio_control_functions.cpp  gpio_interface.cpp  mg6010_can_interface.cpp  mg6010_controller.cpp  mg6010_controller_node.cpp  mg6010_protocol.cpp  mg6010_test_node.cpp  motor_abstraction.cpp  motor_manager.cpp  motor_parameter_mapping.cpp  motor_test_suite.cpp  role_strategy.cpp  ros_interface_manager.cpp  safety_monitor.cpp  shutdown_handler.cpp
pragati_ros2/src/motor_control_ros2/test/: basic_service_test.cpp  gpio_test.cpp  test_action_server_manager.cpp  test_action_servers.cpp  test_action_topic_discovery.cpp  test_callback_groups.cpp  test_can_communication.cpp  test_can_io_epoll.cpp  test_control_loop_manager.cpp  test_lifecycle_node.cpp  test_mg6010_init_shutdown.cpp  test_motor_absence.cpp  test_motor_control_safety.cpp  test_motor_manager.cpp  test_motor_simulator.cpp  test_motor_test_suite.cpp  test_motor_timeout_stop.cpp  test_parameter_validation.cpp  test_protocol_encoding.cpp  test_remote_motion_logging.cpp  test_role_strategy.cpp  test_ros_interface_manager.cpp  test_safety_monitor.cpp  test_safety_monitor_unit.cpp  test_service_blocking_removal.cpp  test_shutdown_handler.cpp  test_simulation_mode.cpp  test_watchdog_exempt_flag.cpp
pragati_ros2/src/odrive_control_ros2/: CAN_TEST_TOOL.md  CMakeLists.txt  README.md  odrvie_cansimple.dbc  package.xml
pragati_ros2/src/odrive_control_ros2/config/: production.yaml
pragati_ros2/src/odrive_control_ros2/docs/: ODRIVE_SETUP.md  USAGE.md
pragati_ros2/src/odrive_control_ros2/launch/: vehicle_drive.launch.py
pragati_ros2/src/odrive_control_ros2/src/: odrive_can_driver.cpp  odrive_can_tool.cpp  odrive_service_node.cpp  socketcan_interface.cpp
pragati_ros2/src/pattern_finder/: CMakeLists.txt  README.md  package.xml
pragati_ros2/src/pid_tuning/: package.xml  setup.py
pragati_ros2/src/robot_description/: ARCHITECTURE_DIAGRAM.txt  CMakeLists.txt  GAZEBO_QUICKSTART.md  GAZEBO_SETUP_SUMMARY.md  QUICK_REFERENCE.md  README.md  package.xml  test_gazebo_setup.sh
pragati_ros2/src/vehicle_arm_sim/: CMakeLists.txt  package.xml
pragati_ros2/src/vehicle_control/: .gitignore  CMakeLists.txt  README.md  __init__.py  debug_diagnostics.py  demo.py  demo_complete_functionality.py  package.xml  pytest.ini  quick_start.py  requirements-dev.txt  requirements-optional.txt  requirements-simulation.txt  requirements.txt  run_validation_tests.sh  setup.py  simple_demo.py  validate_system.py
pragati_ros2/src/yanthra_move/: .gitignore  CHANGELOG.md  CMakeLists.txt  GPIO_IMPLEMENTATION_STATUS.md  README.md  package.xml
pragati_ros2/src/yanthra_move/archive/: README.md
(+2121 files in other folders)
