<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>common_utils</name>
  <version>1.0.0</version>
  <description>Common utilities for Pragati ROS2 nodes including logging and monitoring</description>

  <maintainer email="team@pragati-robotics.com">Pragati Robotics Team</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <buildtool_depend>ament_cmake_python</buildtool_depend>

  <!-- C++ header dependencies (json_logging.hpp uses rclcpp + nlohmann_json) -->
  <depend>rclcpp</depend>
  <depend>nlohmann-json3-dev</depend>

  <!-- Python module dependencies -->
  <depend>rclpy</depend>
  <depend>std_msgs</depend>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
